# yolov5v6_pnnx

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  yolov5s6.ncnn.param  yolov5v6.cpp
ncnn/lib/cmake/: OSDependentTargets.cmake
ncnn/lib/cmake/ncnn/: ncnn.cmake
